# RAdam-Cpp

./: .gitmodules  CMakeLists.txt  README.md
Examples/: CMakeLists.txt  booth.cc  eggholder.cc
Includes/radam/: params.hpp  radam.hpp
